Put RTE toolbar in subheader (sticky) Fix me: The toolbar overflowd from the subheader when wrapped

--- a/css/app.css
+++ b/css/app.css
@@ -263,3 +263,7 @@
 .popup-buttons.row{
   margin-left:0;
 }
+
+.ta-toolbar.btn-toolbar{
+  margin-left:0;
+}
